compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__echo__echo_with_complex_expression_as_a_message.snap
---
source: compiler-core/src/javascript/tests/echo.rs
expression: "\npub fn main() {\n  echo 1 as case name() {\n    \"Giacomo\" -> \"hello Jak!\"\n    _ -> \"hello!\"\n  }\n}\n\nfn name() { \"Giacomo\" }\n"
---
----- SOURCE CODE

pub fn main() {
  echo 1 as case name() {
    "Giacomo" -> "hello Jak!"
    _ -> "hello!"
  }
}

fn name() { "Giacomo" }


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

function name() {
  return "Giacomo";
}

export function main() {
  return echo(
    1,
    (() => {
      let $ = name();
      if ($ === "Giacomo") {
        return "hello Jak!";
      } else {
        return "hello!";
      }
    })(),
    "src/module.gleam",
    3,
  );
}

// ...omitted code from `templates/echo.mjs`...
